--- a/index.html
+++ b/index.html
@@ -9,17 +9,12 @@
 </head>
 <body>
 <h1>Keep the Night Fury happy or be schorched in a fiery blaze!</h1>
-<button class="staryplay">START GAME</button>
+<button id ="startbutton">START GAME</button>
 
 
-<div class="tamagotchitext" style="text-align: center">
-	<div class="value-display">
-		<div id="rest" class="value-display">10</div>
-		<div id="fullness" class="value-display">10</div>
-		<div id="hydration" class="value-display">10</div>
-		<div id="happiness" class="value-display">10</div>
-	</div>
-</div>
+
+
+
 <!-- <div style="background-image: url("../images/HTTYDBACKGROUND.jpg")">
     <img src="images/toothlesspng.png"/>
  </div> -->
@@ -28,12 +23,18 @@
 		<img src="images/HTTYDBACKGROUND.jpg" alt="Background">
 		<img src="images/toothlesspng.png" alt="Toothless"> -->
 <div class="layered-image">
-  <img class="image-base" src="images/HTTYDBACKGROUND.jpg" alt=""/>
+  <img class="image-base" src="images/HTTYDBACKGROUND.jpg" alt="" />
   <img class="image-overlay" src="images/toothlesspng.png" alt="" />
+  <img class="image-overlay" src="images/toothlesspng.png" alt="" />
+  <img class="image-overlay" id="fire" src="images/FLAMES.png" alt="" style="display:none" />
 </div>
 </div>
 
 <div>
+
+
+
+
 <!-- <img src="images/tamagotchitoothless.jpg" alt="Toothless"> -->
 
 
@@ -48,10 +49,16 @@
 
 <div id="tamagotchitoothless"> 
 
-
 </div>
 
-
+<div class="tamagotchitext" style="text-align: center">
+	<div class="value-display">
+		<div>Rest: <span id="rest" class="value-display">10</span></div>
+		<div>Fullness: <span id="fullness" class="value-display">10</span></div>
+		<div>Hydration: <span id="hydration" class="value-display">10</span></div>
+		<div>Happiness: <span id="happiness" class="value-display">10</span></div>
+	</div>
+</div>
 
 
 <center>
